Added the name 'alex-and-rick-and-morty' to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-vanilla-js-template",
+  "name": "alex-and-rick-and-morty",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
